Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.2 ----------

[w2x] The custom configuration now supports an optional xhtml template (writer2xhtml-template.xhtml)
  in the same directory as writer2xhtml.xml

[w2x] The xhtml configuration now also supports complex options in the API

[w2x] Bugfix: Corrected problem with relative links (this affected package format only)

[w2x] Added EPUB export

[all] API change: The interface ConverterResult supports an additional method to access the
  meta data of the source document. A new interface MetaData has been introduced to support this

[all] API change: The interface ConverterResult supports additional methods providing pointers to
  headings and index tables in the document. A new interface TocEntry has been introduced to support this 

[all] API change: New methods getMIMEType() and isMasterDocument() added to the OutputFile
  interface. The latter is used to identify files that are part of the main document flow
  (only the XHTML export generates more that one master document currently)

[w2x] Added user interface to edit custom configuration

---------- version 1.1.1 ----------

[w2l] Added user interface to edit custom configuration

[w2x] Added two attribute style maps: "underline" and "overstrike"

[w2l] Style maps now (again) works in tables

[w2l] Bugfix: Font is now selected correctly in list labels

[w2x] New option formulas (values starmath, latex, image+starmath (default), image+latex)
  to control export of formulas in xhtml 1.0 strict
  
[w2x] Avoid exporting redundant lang+dir information

[w2x] New option multilingual (default true) to turn of export of language information
  (except on the root element <html>)

[w2x] New option template_ids (default empty) to give the id's used to identity the parts
  of an xhtml template in the order content,header,footer,panel

[w2x] New option pretty_print (default true) to turn of pretty printing of xhtml source
